--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -9,3 +9,13 @@
 = link_to 'Edit', edit_post_path(@post)
 \|
 = link_to 'Back', posts_path
+
+%section.section-comments 
+  %h2
+    %strong= "#{@post.comments.count} Comments "
+  = render @post.comments
+  
+  .comment-form
+    %hr 
+    %h3.subtitle Leave a reply 
+    = render partial: 'comments/form', locals: {comment: @post.comments.build}
